--- a/package.xml
+++ b/package.xml
@@ -40,10 +40,13 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>message_generation</build_depend>
+  <!--<build_depend>message_generation</build_depend>-->
   <exec_depend>message_runtime</exec_depend>
   <depend>roscpp</depend>
+  <depend>rospy</depend>
   <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
   <!-- <depend>sensor_msgs</depend> -->
   <!-- <depend>geometry_msgs</depend> -->
   
